--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
+		<dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>32.1.2-jre</version> <!-- or latest -->
+</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
